tests/parsing/smtlib/v2.6/errors/084_define-sort_bad_arg_1.expected
File "tests/parsing/smtlib/v2.6/errors/084_define-sort_bad_arg_1.smt2", line 2, character 18-19:
2 | (define-sort foo (_))
                      ^
Error while parsing a sort definition, read the reserved word '_',
      but expected a closing parenthesis, or a list of symbols for the
      definition arguments.
